--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/cactus"]
 	path = themes/cactus
 	url = https://github.com/digitalcraftsman/hugo-cactus-theme.git
+[submodule "themes/casper2"]
+	path = themes/casper2
+	url = https://github.com/eueung/hugo-casper-two.git
