--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "cactus"
 # Enter your tracking code to enable Google Analytics
 googleAnalytics = ""
 # Disable comments by leaving disqusShortname empty
-disqusShortname = "spf13"
+disqusShortname = "eml24"
 
 [params]
 	name = "Roy"
