--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ googleAnalytics = ""
 disqusShortname = "eml24"
 
 [params]
-	name = "Roy"
+	name = "Roy Motloutsi"
 	description = "Hugo demo website"
 	bio = "Blogger & Programmer"
 	# Enter optionally your twitter account
